# certificates-monitor

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: config.py  queries.py
models/: database.py
static/css/: style.css
static/js/: app.js
templates/: certificates.html  dashboard.html  failures.html
utils/: mysql_monitor.py  ssh_client.py
